--- a/pom.xml
+++ b/pom.xml
@@ -3,8 +3,8 @@
 
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>edu.upc.dsa</groupId>
-    <artifactId>rest-example2</artifactId>
+    <groupId>edu.upc.eetac.dsa</groupId>
+    <artifactId>Minim1-Aaron</artifactId>
     <packaging>jar</packaging>
     <version>1.0-SNAPSHOT</version>
     <name>rest-example2</name>
@@ -75,8 +75,8 @@
                 <version>2.5.1</version>
                 <inherited>true</inherited>
                 <configuration>
-                    <source>1.7</source>
-                    <target>1.7</target>
+                    <source>7</source>
+                    <target>7</target>
                 </configuration>
             </plugin>
             <plugin>
